# minimal_request_manager

./: LICENSE  README.md  TODO.md  cli.py  controler.py  diagram.drawio  log.py  main.py  pyproject.toml  pyptoject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
integration/: adaptor.py  contract.py  request.py  utils.py
request_manager/: __init__.py  cli.py  controler.py  controller.py  log.py  main.py
request_manager/integration/: __init__.py  abc.py  adaptor.py  contract.py  utils.py
tests/: test_adoptors.py  test_cli.py  test_controller.py
tests/fixtures/: __init__.py
