[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 99
target-version = ['py311']

[project]
name = "reqeust_manager"
version = "0.0.1"
description = "a simple request manger for my assignment"
readme = "README.md"
authors = [
    { name = "vahid imanian", email = "vahidtwo@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["request_manager", "request manager"]
dependencies = [
  "questionary==2.0.1",
]
requires-python = ">=3.11"

[project.scripts]
rmcli = "request_manager.cli:main"