[metadata]
name = request_manager
version = 0.0.1
description = a simple request manager for my assignment
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.11
packages = find_namespace:
include_package_data = True

